<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nba5"
    tools:context=".CreateAccount.view.CreateAccountActivity">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/rlCrUser"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/nba"
                android:layout_weight="4">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/new_users"
                    android:gravity="center"
                    android:textColor="@android:color/background_dark"
                    android:textSize="28dp"
                    android:textStyle="bold"/>
            </RelativeLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textColorHint="@android:color/black"
                android:layout_marginTop="16dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/id_txv_account_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="19dp"


                    android:hint="Email"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/black"
                android:layout_marginTop="16dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/id_txv_account_name"
                    android:layout_width="match_parent"
                    android:textSize="19dp"

                    android:layout_height="wrap_content"
                    android:hint="@string/str_account_name"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/black"
                android:layout_marginTop="16dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/id_txv_account_username"
                    android:layout_width="match_parent"
                    android:textSize="19dp"

                    android:layout_height="wrap_content"
                    android:hint="@string/str_account_user"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/black"
                android:layout_marginTop="16dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@android:color/holo_green_light">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/id_txv_account_password"
                    android:layout_width="match_parent"
                    android:textSize="19dp"

                    android:layout_height="wrap_content"
                    android:hint="@string/str_account_password"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/black"
                android:layout_marginTop="16dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@android:color/holo_green_light">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/id_txv_account_repassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="19dp"

                    android:hint="@string/str_account_repassword"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <Button

                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/create"
                android:layout_marginTop="20dp"

                android:textColor="@android:color/white"
                android:textSize="17dp"
                android:textStyle="bold"
                android:background="@drawable/border"
                android:onClick="clickCreateAccount"/>


        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>