<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nba3"
    tools:context=".Login.view.LoginActivity">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.design.widget.CollapsingToolbarLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:collapsedTitleGravity="left"
        app:layout_scrollFlags="scroll|exitUntilCollapsed">

        <ImageView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_red_light"
            android:focusableInTouchMode="true"
            android:focusedByDefault="true"
            android:scaleType="centerInside"
            android:src="@drawable/logo"
            app:layout_collapseMode="parallax"
            app:layout_collapseParallaxMultiplier="0.8" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:text="^"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
        />


    </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:weightSum="1"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            >

            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:scaleType="center"
                android:src="@drawable/play" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="30dp"
                android:background="@color/colorPrimaryDark"
                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite"
                    app:counterEnabled="true"
                    app:counterMaxLength="30"
                    android:layout_marginLeft="48dp"
                    android:layout_marginRight="48dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/id_txv_login_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusedByDefault="false"
                        android:hint="@string/str_login_name"
                        android:inputType="textEmailAddress"
                        android:textSize="18dp"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite"
                    android:layout_marginRight="48dp"
                    android:layout_marginLeft="48dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@android:color/holo_green_light">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/id_txv_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/str_login_password"
                        android:inputType="textPassword"
                        android:textSize="18dp"
                        />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/id_btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="48dp"
                    android:layout_marginRight="48dp"
                    android:layout_weight="1"
                    android:text="@string/str_btn_login"
                    android:theme="@style/RaisedButtonDark"
                    android:onClick="onClickButton"
                    android:background="@drawable/border1"
                    android:textColor="@android:color/background_light"/>


                <TextView
                    android:id="@+id/txt_BtnCreateUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_create_account"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:layout_weight="2"
                    android:layout_marginBottom="20dp"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:onClick="onClickButtonCreateAccount"
                    android:layout_gravity="center_horizontal"
                    />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>